# 2026-fwdays-agentic-greenfield-task-pf

./: .coverage  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yaml  package.json  pyproject.toml  requirements.txt
.claude/: settings.json
.codex/prompts/: project-factory-onboard.md
.github/prompts/: project-factory-onboard.prompt.md
.github/workflows/: ci.yml
askdocs/: answer.py  chunking.py  cli.py  embeddings.py  eval.py  ingest.py  llm.py  retriever.py  sources.py  store.py  sync.py
corpus/: welcome.md
docs/: context-architecture.md  current-state.md  mvp-capability-plan.md  requirements.md
docs/adr/: ADR-0001-stack.md  ADR-0002-context-architecture.md
docs/qa/: acceptance-report.md  traceability-report.md  trajectory-report.md
openspec/: project.md
openspec/changes/add-eval-harness/: tasks.md
openspec/changes/add-ingest-quality/: design.md  proposal.md  tasks.md
openspec/changes/add-rag-skeleton/: design.md  tasks.md
openspec/changes/add-sync-and-delivery/: design.md  proposal.md  tasks.md
openspec/specs/answer/: spec.md
openspec/specs/cli/: spec.md
quality/: coverage-baseline.json
scripts/: cov-adapt.mjs  hooks-commit-msg.mjs  hooks-pre-commit.mjs  qa-verify.mjs
tests/: conftest.py  golden.yaml  test_answer.py  test_chunking.py  test_cli.py  test_deployment.py  test_docs.py  test_eval.py  test_ingest.py  test_ingest_idempotency.py  test_retriever.py  test_sources.py  test_sync.py
tests/corpus/: README.md  bezpeka.md  ekipazh.md  notatky.txt  proekt.md
trace/: trace.json  trajectory.json
(+28 files in other folders)
