[project]
name = "askdocs"
version = "0.1.0"
description = "Local RAG: chat with your markdown docs, grounded and cited."
requires-python = ">=3.12"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "integration: needs the Qdrant service and the embedding model (real vector store)",
    "e2e: end-to-end CLI flow",
    "live: needs a live LLM endpoint (skipped unless LLM_LIVE=1)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]
